# keploy-cpp-mongodb-quickstart

./: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  keploy.yml
keploy/test-set-0/: mocks.yaml
keploy/test-set-0/tests/: test-1.yaml  test-2.yaml  test-3.yaml
src/: main.cpp
